--- a/project/flyer.html
+++ b/project/flyer.html
@@ -106,8 +106,8 @@
             <li>Benton County Thriving Communities 2040 - A geovisualiztion solution to survey and questionaries &nbsp;&nbsp;&nbsp; <small>by Madeleine Savage, Scott Whitson, Sione Filimoehala</small></li>
             <br/>
         </ul>
-        <p class="comment">* the participants are listed in alphabetical order.</p>
-        <p class="comment">** The Schedule might be slightly changed, please contact Bo Zhao (zhao2@oregonstate.edu) for latest updates.</p>
+        <p class="comment">* The schedule might be slightly changed, please contact Bo Zhao (zhao2@oregonstate.edu) for latest updates.</p>
+        <p class="comment">** The participants are listed in alphabetical order.</p>
     </div>
     <div class="credit">
         <p><img style="width:180px;" align="right" src="img/grouplogo.png"></p> <br/><br/><br/>
