--- a/project/flyer.html
+++ b/project/flyer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Final Presentation for GEOG 4/572</title>
+    <title>Final Presentations for GEOG 4/572</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -96,7 +96,7 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="title text-center">Final Presentation of GEOG 4/572: Geovisual Analytics</div>
+        <div class="title text-center">Final Presentations of GEOG 4/572: Geovisual Analytics</div>
         <div class="subtitle text-center">The presentation will be held in 361 Strand Hall (The GAZE Lab) on June 13th, between 2 to 4 pm. Dessert and coffee will be served.</div>
         <ul class="">
             <li>An Open Briefing &nbsp;&nbsp;&nbsp; <small>by Bo Zhao *</small></li>
