--- a/project/flyer.html
+++ b/project/flyer.html
@@ -97,7 +97,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="title text-center">Final Presentations of GEOG 4/572: Geovisual Analytics</div>
-        <div class="subtitle text-center">The presentation will be held in 361 Strand Hall (The GAZE Lab) on June 13th, between 2 to 4 pm. Dessert and coffee will be served.</div>
+        <div class="subtitle text-center">The presentation will be held in 361 Strand Hall (The GAZE Lab) on June 13th, between 2 to 4 pm. Dessert and coffee will be served. Everyone is welcome! Please join us!</div>
         <ul class="">
             <li>An Open Briefing &nbsp;&nbsp;&nbsp; <small>by Bo Zhao *</small></li>
             <li>A 3D Geospatial Data Portal for HJ Andrews Forest &nbsp;&nbsp;&nbsp; <small> by Christopher Cosgrove, Jared Ritchey, Paulo Murillo Sandoval, Tyler Harris **</small></li>
