--- a/project/flyer.html
+++ b/project/flyer.html
@@ -101,9 +101,9 @@
         <ul class="">
             <li>An Open Briefing &nbsp;&nbsp;&nbsp; <small>by Bo Zhao *</small></li>
             <li>A 3D Geospatial Data Portal for HJ Andrews Forest &nbsp;&nbsp;&nbsp; <small> by Christopher Cosgrove, Jared Ritchey, Paulo Murillo Sandoval, Tyler Harris **</small></li>
-            <li>A Geoviusualization of Sea Level Induced Immigration &nbsp;&nbsp;&nbsp; <small>by Efrain Noa Yarasca, Hoda Tahami Nicolas Mathews, Riley Johnson</small></li>
+            <li>A Geovisualization of Sea Level Induced Immigration &nbsp;&nbsp;&nbsp; <small>by Efrain Noa Yarasca, Hoda Tahami Nicolas Mathews, Riley Johnson</small></li>
             <li>Standing With #Standing Rock - A storymap about location spoofing in an environmental protest &nbsp;&nbsp;&nbsp; <small>by Yingqi Tang, Yuanyuan Tian</small></li>
-            <li>Benton County Thriving Communities 2040 - A geovisualiztion solution to survey and questionaries &nbsp;&nbsp;&nbsp; <small>by Madeleine Savage, Scott Whitson, Sione Filimoehala</small></li>
+            <li>Benton County Thriving Communities 2040 - A geovisualiztion solution to survey and questionnaires &nbsp;&nbsp;&nbsp; <small>by Madeleine Savage, Scott Whitson, Sione Filimoehala</small></li>
             <br/>
         </ul>
         <p class="comment">* The schedule might be slightly changed, please contact Bo Zhao (zhao2@oregonstate.edu) for latest updates.</p>
