--- a/lectures/lec04/part01/index2.html
+++ b/lectures/lec04/part01/index2.html
@@ -11,7 +11,7 @@
 <div id="main" class>
     <p id="foo">This is my first paragraph.</p>
     <p id="bar">This is my second paragraph. <a href="http://www.oregonstate.edu">Take me to OSU</a>.</p>
-    <img src="img/osu.jpg"/>
+    <a href="https://www.oregonstate.edu" target="_blank"><img src="img/osu.jpg"/></a>
 </div>
 </body>
 </html>
