--- a/labs/lab03/map1.html
+++ b/labs/lab03/map1.html
@@ -20,8 +20,7 @@
         zoom: 7,
         maxZoom: 10,
         minZoom: 3,
-        detectRetina: true, //support Retina Display if the client uses high resolution monitor.
-        attribution: 'Cell Tower Data &copy; Map Cruzin | Oregon counties &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Bo Zhao'});
+        detectRetina: true});
 
     // 2. Add a base map.
     L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
