--- a/labs/lab03/map8.html
+++ b/labs/lab03/map8.html
@@ -102,8 +102,7 @@
         zoom: 3,
         maxZoom: 10,
         minZoom: 3,
-        detectRetina: true, //support Retina Display if the client uses high resolution monitor.
-        attribution: 'Cell Tower Data &copy; Map Cruzin | Oregon counties &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Bo Zhao'});
+        detectRetina: true});
 
     // 2. Add a base map.
     // L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
@@ -140,7 +139,8 @@
             else if (feature.properties.company == "Oregon RSA")  { id = 7; }
             else { id = 8;} // "Salem Cellular"
             return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-signal marker-color-' + (id + 1).toString() })});
-        }
+        },
+        attribution: 'Cell Tower Data &copy; Map Cruzin | Oregon counties &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Bo Zhao'
     }).addTo(mymap);
 
 
