--- a/labs/lab03/map1.html
+++ b/labs/lab03/map1.html
@@ -20,7 +20,8 @@
         zoom: 7,
         maxZoom: 10,
         minZoom: 3,
-        detectRetina: true});
+        detectRetina: true // detect whether the sceen is high resolution or not.
+    });
 
     // 2. Add a base map.
     L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
