--- a/labs/lab03/map3.html
+++ b/labs/lab03/map3.html
@@ -32,16 +32,17 @@
     // 3. Add cell towers GeoJSON Data
     // Null variable that will hold cell tower data
     var cellTowers = null;
-    // Get GeoJSON and put on it on the map when it loads
 
-    // 4. build up a set of colors from colorbrewer's set2 category
-    var colors = chroma.scale('Set2').mode('lch').colors(9);
+
+    // 4. build up a set of colors from colorbrewer's dark2 category
+    var colors = chroma.scale('Dark2').mode('lch').colors(9);
 
     // 5. dynamically append style classes to this page. This style classes will be used for colorize the markers.
     for (i = 0; i < 9; i++) {
         $('head').append($("<style> .marker-color-" + (i + 1).toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
     }
 
+    // Get GeoJSON and put on it on the map when it loads
     cellTowers= L.geoJson.ajax("assets/cell_towers.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
