--- a/labs/lab03/map5.html
+++ b/labs/lab03/map5.html
@@ -5,6 +5,7 @@
     <title>Cell Towers in Oregon (2009)</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
 
         html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
@@ -13,7 +14,7 @@
             line-height: 16px;
             width: 140px;
             color: #333333;
-            font-family: 'Open Sans', Helvetica, sans-serif;
+            font-family: 'Titillium Web', sans-serif;
             padding: 6px 8px;
             background: white;
             background: rgba(255,255,255,0.5);
@@ -42,13 +43,6 @@
             margin: 0;
         }
 
-        #credits p {
-            margin-top: 5px;
-            font-size: 12px;
-            text-align: left;
-            line-height: 16px;
-        }
-
     </style>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
@@ -74,16 +68,17 @@
     // 3. Add cell towers GeoJSON Data
     // Null variable that will hold cell tower data
     var cellTowers = null;
-    // Get GeoJSON and put on it on the map when it loads
 
-    // 4. build up a set of colors from colorbrewer's set2 category
-    var colors = chroma.scale('Set2').mode('lch').colors(9);
+
+    // 4. build up a set of colors from colorbrewer's dark2 category
+    var colors = chroma.scale('Dark2').mode('lch').colors(9);
 
     // 5. dynamically append style classes to this page. This style classes will be used for colorize the markers.
     for (i = 0; i < 9; i++) {
         $('head').append($("<style> .marker-color-" + (i + 1).toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
     }
 
+    // Get GeoJSON and put on it on the map when it loads
     cellTowers= L.geoJson.ajax("assets/cell_towers.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
@@ -109,7 +104,7 @@
 
 
     // 6. Set function for color ramp
-    colors = chroma.scale('OrRd').mode('hsl').colors(5); //colors = chroma.scale('OrRd').colors(5);
+    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
 
     function setColor(density) {
         var id = 0;
@@ -134,16 +129,18 @@
         };
     }
 
-    // Add county polygons
-    L.geoJson.ajax("assets/counties.geojson", {
+    // 8. Add county polygons
+    // create counties variable, and assign null to it.
+    var counties = null;
+    counties = L.geoJson.ajax("assets/counties.geojson", {
         style: style
     }).addTo(mymap);
 
 
-    // Create Leaflet Control Object for Legend
+    // 9. Create Leaflet Control Object for Legend
     var legend = L.control({position: 'topright'});
 
-    // Function that runs when legend is added to map
+    // 10. Function that runs when legend is added to map
     legend.onAdd = function () {
 
         // Create Div Element and Populate it with HTML
@@ -168,10 +165,10 @@
         return div;
     };
 
-    // Add a legend to map
+    // 11. Add a legend to map
     legend.addTo(mymap);
 
-    // Add a scale bar to map
+    // 12. Add a scale bar to map
     L.control.scale({position: 'bottomleft'}).addTo(mymap);
 
 </script>
