--- a/labs/lab03/map7.html
+++ b/labs/lab03/map7.html
@@ -5,6 +5,7 @@
     <title>Cell Towers in Oregon (2009)</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
 
         html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
@@ -13,7 +14,7 @@
             line-height: 16px;
             width: 140px;
             color: #333333;
-            font-family: 'Open Sans', Helvetica, sans-serif;
+            font-family: 'Titillium Web', sans-serif;
             padding: 6px 8px;
             background: white;
             background: rgba(255,255,255,0.5);
@@ -42,21 +43,13 @@
             margin: 0;
         }
 
-        #credits p {
-            margin-top: 5px;
-            font-size: 12px;
-            text-align: left;
-            line-height: 16px;
-        }
-
-
         .leaflet-tooltip.feature-label {
             background-color: transparent;
             border: transparent;
             box-shadow: none;
             font-weight: bold;
             font-size: 12px;
-            font-family:'Open Sans', Helvetica, sans-serif;
+            font-family: 'Titillium Web', sans-serif;
             text-shadow: 0 0 2px #FFFFFF;
             color: rgba(35, 35, 35, 0.78)
         }
@@ -75,15 +68,13 @@
 <div id="map"></div>
 <script>
 
-    // This is core of how Labelgun works. We must provide two functions, one
+    // 14. This is core of how Labelgun works. We must provide two functions, one
     // that hides our labels, another that shows the labels. These are essentially
     // callbacks that labelgun uses to actually show and hide our labels
     // In this instance we set the labels opacity to 0 and 1 respectively.
-    // https://github.com/Geovation/labelgun
     var hideLabel = function(label){ label.labelObject.style.opacity = 0;};
     var showLabel = function(label){ label.labelObject.style.opacity = 1;};
     var labelEngine = new labelgun.default(hideLabel, showLabel);
-
     var labels = [];
 
     // 1. Create a map object.
@@ -102,14 +93,15 @@
     var cellTowers = null;
     // Get GeoJSON and put on it on the map when it loads
 
-    // 4. build up a set of colors from colorbrewer's set2 category
-    var colors = chroma.scale('Set2').mode('lch').colors(9);
+    // 4. build up a set of colors from colorbrewer's dark2 category
+    var colors = chroma.scale('Dark2').mode('lch').colors(9);
 
     // 5. dynamically append style classes to this page. This style classes will be used for colorize the markers.
     for (i = 0; i < 9; i++) {
         $('head').append($("<style> .marker-color-" + (i + 1).toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
     }
 
+    // Get GeoJSON and put on it on the map when it loads
     cellTowers= L.geoJson.ajax("assets/cell_towers.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
@@ -135,7 +127,7 @@
 
 
     // 6. Set function for color ramp
-    colors = chroma.scale('OrRd').mode('hsl').colors(5); //colors = chroma.scale('OrRd').colors(5);
+    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
 
     function setColor(density) {
         var id = 0;
@@ -160,8 +152,11 @@
         };
     }
 
-    // Add county polygons
-    var counties = L.geoJson.ajax("assets/counties.geojson", {
+    // 8. Add county polygons
+    // create counties variable, and assign null to it.
+    // 15. Create a label for each county.
+    var counties = null;
+    counties = L.geoJson.ajax("assets/counties.geojson", {
         style: style,
         onEachFeature: function (feature, label) {
             label.bindTooltip(feature.properties.NAME, {className: 'feature-label', permanent:true, direction: 'center'});
@@ -170,10 +165,10 @@
     }).addTo(mymap);
 
 
-    // Create Leaflet Control Object for Legend
+    // 9. Create Leaflet Control Object for Legend
     var legend = L.control({position: 'topright'});
 
-    // Function that runs when legend is added to map
+    // 10. Function that runs when legend is added to map
     legend.onAdd = function () {
 
         // Create Div Element and Populate it with HTML
@@ -198,26 +193,26 @@
         return div;
     };
 
-    // Add a legend to map
+    // 11. Add a legend to map
     legend.addTo(mymap);
 
-    // Add a scale bar to map
+    // 12. Add a scale bar to map
     L.control.scale({position: 'bottomleft'}).addTo(mymap);
 
 
-    // https://github.com/cloudybay/leaflet.latlng-graticule
+    // 13. Add a latlng graticules.
     L.latlngGraticule({
         showLabel: true,
         opacity: 0.2,
         color: "#747474",
-        fillColor: '#747474',
         zoomInterval: [
-            {start: 6, end: 7, interval: 2},
-            {start: 8, end: 11, interval: 0.5}
+            {start: 3, end: 7, interval: 2},
+            {start: 8, end: 10, interval: 0.5}
         ]
     }).addTo(mymap);
 
 
+    // 16. create an addLabel function to dynamically update the visible labels, aiming to avoid the lable overlap.
 
     function addLabel(layer, id) {
 
@@ -252,10 +247,9 @@
                 layer.added = true;
             }
         }
-
     }
 
-
+    // 17. We will update the visualization of the labels whenever you zoom the map.
     mymap.on("zoomend", function(){
         var i = 0;
         counties.eachLayer(function(label){
@@ -263,6 +257,7 @@
         });
         labelEngine.update();
     });
+
 
 </script>
 </body>
