--- a/labs/lab03/map8.html
+++ b/labs/lab03/map8.html
@@ -5,15 +5,16 @@
     <title>Cell Towers in Oregon (2009)</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
 
-        html, body, #map { width: 100%; height: 100%; margin: 0; background: rgba(255, 255, 255, 0); }
+        html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
 
         .legend {
             line-height: 16px;
             width: 140px;
             color: #333333;
-            font-family: 'Open Sans', Helvetica, sans-serif;
+            font-family: 'Titillium Web', sans-serif;
             padding: 6px 8px;
             background: white;
             background: rgba(255,255,255,0.5);
@@ -42,21 +43,13 @@
             margin: 0;
         }
 
-        #credits p {
-            margin-top: 5px;
-            font-size: 12px;
-            text-align: left;
-            line-height: 16px;
-        }
-
-
         .leaflet-tooltip.feature-label {
             background-color: transparent;
             border: transparent;
             box-shadow: none;
             font-weight: bold;
             font-size: 12px;
-            font-family:'Open Sans', Helvetica, sans-serif;
+            font-family: 'Titillium Web', sans-serif;
             text-shadow: 0 0 2px #FFFFFF;
             color: rgba(35, 35, 35, 0.78)
         }
@@ -66,8 +59,8 @@
     <script src="https://unpkg.com/labelgun@6.0.0/lib/labelgun.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
-    <script type="text/javascript" src="js/proj4js-compressed.js"></script>
-    <script type="text/javascript" src="js/proj4leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
     <script type="text/javascript" src="https://cloudybay.github.io/leaflet.latlng-graticule/leaflet.latlng-graticule.js"></script>
@@ -77,18 +70,18 @@
 <div id="map"></div>
 <script>
 
-    // This is core of how Labelgun works. We must provide two functions, one
+
+    // 14. This is core of how Labelgun works. We must provide two functions, one
     // that hides our labels, another that shows the labels. These are essentially
     // callbacks that labelgun uses to actually show and hide our labels
     // In this instance we set the labels opacity to 0 and 1 respectively.
-    // https://github.com/Geovation/labelgun
     var hideLabel = function(label){ label.labelObject.style.opacity = 0;};
     var showLabel = function(label){ label.labelObject.style.opacity = 1;};
     var labelEngine = new labelgun.default(hideLabel, showLabel);
-
     var labels = [];
 
-    crs = new  L.Proj.CRS('EPSG:2991',
+    // 18. define the coordinate reference system (CRS)
+    mycrs = new L.Proj.CRS('EPSG:2991',
         '+proj=lcc +lat_1=43 +lat_2=45.5 +lat_0=41.75 +lon_0=-120.5 +x_0=400000 +y_0=0 +ellps=GRS80 +datum=NAD83 +units=m +no_defs',
         {
             resolutions: [8192, 4096, 2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1] // example zoom level resolutions
@@ -96,15 +89,17 @@
     );
 
     // 1. Create a map object.
+    // 19. assign the custom crs to the crs option. change the zoom levels due to the change of projection.
     var mymap = L.map('map', {
-        crs: crs,
+        crs: mycrs,
         center: [44.13, -119.93],
-        zoom: 3,
+        zoom: 4,
         maxZoom: 10,
         minZoom: 3,
         detectRetina: true});
 
     // 2. Add a base map.
+    // 20. comment off the base map, because the publicly shared base map usually cannot reprojected
     // L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
 
     // 3. Add cell towers GeoJSON Data
@@ -112,14 +107,15 @@
     var cellTowers = null;
     // Get GeoJSON and put on it on the map when it loads
 
-    // 4. build up a set of colors from colorbrewer's set2 category
-    var colors = chroma.scale('Set2').mode('lch').colors(9);
+    // 4. build up a set of colors from colorbrewer's dark2 category
+    var colors = chroma.scale('Dark2').mode('lch').colors(9);
 
     // 5. dynamically append style classes to this page. This style classes will be used for colorize the markers.
     for (i = 0; i < 9; i++) {
         $('head').append($("<style> .marker-color-" + (i + 1).toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
     }
 
+    // Get GeoJSON and put on it on the map when it loads
     cellTowers= L.geoJson.ajax("assets/cell_towers.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
@@ -145,7 +141,7 @@
 
 
     // 6. Set function for color ramp
-    colors = chroma.scale('OrRd').mode('hsl').colors(5); //colors = chroma.scale('OrRd').colors(5);
+    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
 
     function setColor(density) {
         var id = 0;
@@ -170,8 +166,11 @@
         };
     }
 
-    // Add county polygons
-    var counties = L.geoJson.ajax("assets/counties.geojson", {
+    // 8. Add county polygons
+    // create counties variable, and assign null to it.
+    // 15. Create a label for each county.
+    var counties = null;
+    counties = L.geoJson.ajax("assets/counties.geojson", {
         style: style,
         onEachFeature: function (feature, label) {
             label.bindTooltip(feature.properties.NAME, {className: 'feature-label', permanent:true, direction: 'center'});
@@ -180,10 +179,10 @@
     }).addTo(mymap);
 
 
-    // Create Leaflet Control Object for Legend
+    // 9. Create Leaflet Control Object for Legend
     var legend = L.control({position: 'topright'});
 
-    // Function that runs when legend is added to map
+    // 10. Function that runs when legend is added to map
     legend.onAdd = function () {
 
         // Create Div Element and Populate it with HTML
@@ -208,19 +207,19 @@
         return div;
     };
 
-    // Add a legend to map
+    // 11. Add a legend to map
     legend.addTo(mymap);
 
-    // Add a scale bar to map
-    //L.control.scale({position: 'bottomleft'}).addTo(mymap);
+    // 12. Add a scale bar to map
+    // 21. comment off the scale bar, because in same project, scalebar does not make sense.
+    // L.control.scale({position: 'bottomleft'}).addTo(mymap);
 
 
-    // https://github.com/cloudybay/leaflet.latlng-graticule
+    // 13. Add a latlng graticules.
     L.latlngGraticule({
         showLabel: true,
         opacity: 0.2,
         color: "#747474",
-        fillColor: '#747474',
         zoomInterval: [
             {start: 3, end: 7, interval: 2},
             {start: 8, end: 10, interval: 0.5}
@@ -228,6 +227,7 @@
     }).addTo(mymap);
 
 
+    // 16. create an addLabel function to dynamically update the visible labels, aiming to avoid the lable overlap.
 
     function addLabel(layer, id) {
 
@@ -262,10 +262,9 @@
                 layer.added = true;
             }
         }
-
     }
 
-
+    // 17. We will update the visualization of the labels whenever you zoom the map.
     mymap.on("zoomend", function(){
         var i = 0;
         counties.eachLayer(function(label){
