--- a/labs/lab03/map5.html
+++ b/labs/lab03/map5.html
@@ -104,7 +104,7 @@
 
 
     // 6. Set function for color ramp
-    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
+    colors = chroma.scale('RdPu').colors(5); //colors = chroma.scale('OrRd').colors(5);
 
     function setColor(density) {
         var id = 0;
