--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -170,7 +170,7 @@ d3.json('assets/earthquakes.geojson').then(function(data) {
       .group(dateDimensionGroup)
       .elasticY(true)
       .x(d3.time.scale().domain([new Date(2016, 7, 15), new Date(2016, 8, 1)]))
-      .xUnits(d3.time.days);
+      .xUnits(d3.timeDays);
 
 
   var earthquakeCount = dc.dataCount('.dc-data-count');
