--- a/lectures/lec06/error.html
+++ b/lectures/lec06/error.html
@@ -5,15 +5,15 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-<div> </div>
 <script>
-    d3.json("assets/users.json", function(error, data) {
+    d3.json("assets/users.json").then(function( data) {
 
-        if (error) {
-            return console.warn(error);
-        }
+        // if (error) {
+        //     return console.warn(error);
+        // }
 
         d3.select("body")
+            .selectAll("p")
             .data(data)
             .enter()
             .append("p")
