:city_sunrise: quizzes folder

--- a/quizzes/quiz04/index.html
+++ b/quizzes/quiz04/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
     <h2>US Venture Capital Landscape 2011</h2>
 
     <p>
-        This is a <a href="../index.html">dc.js</a> example showing how GeoJson Polygon can be associated with
+        This is a <a href="http://dc-js.github.io/dc.js/">dc.js</a> example showing how GeoJson Polygon can be associated with
         crossfilter
         dimension and group using a choropleth chart. Different regions can be colored differently based on different
         calculation (amount raised). Like any other dc.js chart a choropleth chart can then be mixed with other dc.js
