:four: quizzes folder

--- a/quizzes/quiz04/index.html
+++ b/quizzes/quiz04/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
 
-    <h2>US Venture Capital Landscape 2011</h2>
+    <h2>Quiz 4: D3 and JQuery selector</h2>
 
     <p>
         This is a <a href="http://dc-js.github.io/dc.js/">dc.js</a> example showing how GeoJson Polygon can be associated with
