--- a/lectures/lec09/part01/bar-v5.html
+++ b/lectures/lec09/part01/bar-v5.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-
-    .bar {
-        fill: steelblue;
-    }
-
-    .bar:hover {
-        fill: brown;
-    }
-
-    .axis--x path {
-        display: none;
-    }
-
-</style>
+<html>
+<head>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+</head>
+<body>
 <svg width="960" height="500"></svg>
-<script src="https://d3js.org/d3.v5.min.js"></script>
 <script>
 
     var svg = d3.select("svg"),
@@ -65,3 +53,5 @@
     });
 
 </script>
+</body>
+</html>
