--- a/lectures/lec09/part01/svg1.html
+++ b/lectures/lec09/part01/svg1.html
@@ -24,7 +24,7 @@
         .attr("rx", 150)
         .attr("ry", 50)
         .attr("fill", "green")
-        .attr("opacity", 0.5)
+        .attr("opacity", 0.5);
 
     g.append("text")
         .attr("x", 140)
