--- a/lectures/lec09/part01/bar.html
+++ b/lectures/lec09/part01/bar.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8">
-<style>
-
-    .bar {
-        fill: steelblue;
-    }
-
-    .bar:hover {
-        fill: brown;
-    }
-
-    .axis--x path {
-        display: none;
-    }
-
-</style>
-<svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+</head>
+<body>
+<svg width="960" height="500"></svg>
 <script>
 
     var svg = d3.select("svg"),
+
         margin = {top: 20, right: 20, bottom: 30, left: 40},
         width = +svg.attr("width") - margin.left - margin.right,
         height = +svg.attr("height") - margin.top - margin.bottom;
@@ -65,3 +55,5 @@
     });
 
 </script>
+</body>
+</html>
