--- a/lectures/lec09/part01/bar.html
+++ b/lectures/lec09/part01/bar.html
@@ -2,6 +2,21 @@
 <html>
 <head>
 <meta charset="utf-8">
+<style>
+
+    .bar {
+        fill: steelblue;
+    }
+
+    .bar:hover {
+        fill: brown;
+    }
+
+    .axis--x path {
+        display: none;
+    }
+
+</style>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
@@ -14,7 +29,7 @@
         width = +svg.attr("width") - margin.left - margin.right,
         height = +svg.attr("height") - margin.top - margin.bottom;
 
-    var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+    var x = d3.scaleBand().range([0, width]).padding(0.1),
         y = d3.scaleLinear().rangeRound([height, 0]);
 
     var g = svg.append("g")
@@ -38,7 +53,7 @@
             .attr("class", "axis axis--y")
             .call(d3.axisLeft(y).ticks(10, "%"))
             .append("text")
-            .attr("transform", "rotate(-90)")
+            .attr("transform", "-rotate(90)")
             .attr("y", 6)
             .attr("dy", "0.71em")
             .attr("text-anchor", "end")
