--- a/lectures/lec09/part01/chart1.html
+++ b/lectures/lec09/part01/chart1.html
@@ -16,13 +16,14 @@
 </style>
 <body>
 <svg class="chart" width="420" height="120">
+    <!--Relative to the font-size of the element (2em means 2 times the size of the current font)-->
     <g transform="translate(0,0)">
         <rect width="50" height="19"></rect>
         <text x="50" y="10" dy=".35em">5</text>
     </g>
     <g transform="translate(0,20)">
         <rect width="100" height="19"></rect>
-        <text x="100" y="10" dy=".35em">10</text>
+        <text x="100" y="10" dy="0.35em">10</text>
     </g>
     <g transform="translate(0,40)">
         <rect width="120" height="19"></rect>
