--- a/lectures/lec09/part02/bar.html
+++ b/lectures/lec09/part02/bar.html
@@ -1,47 +1,40 @@
-<!DOCTYPE html>
-<html>
+
+<html lang="EN">
 <head>
-    <title>dc.js - Bar Chart</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/dc.css"/>
+    <meta charset="utf-8">
+    <title>DC.js Bar Chart</title>
+    <link rel="stylesheet" type="text/css" href="http://dc-js.github.io/dc.js/css/dc.css"/>
+    <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <script type="text/javascript" src="https://dc-js.github.io/dc.js/js/dc.js"></script>
 </head>
 <body>
-    <div id="chart"></div>
+<div id="barChart"></div>
 
-    <script type="text/javascript" src="js/d3.js"></script>
-    <script type="text/javascript" src="js/crossfilter.js"></script>
-    <script type="text/javascript" src="js/dc.js"></script>
-    <script type="text/javascript">
+<script type="text/javascript">
 
-        var chart = dc.barChart("#chart");
-        d3.csv("assets/morley.csv").then(function(data) {
+d3.json("assets/payments.json").then(function(data) {
 
-            data.forEach(function(x) {
-                x.Speed = +x.Speed;
-            });
+    var facts = crossfilter(data);
 
-            var ndx                 = crossfilter(data),
-                runDimension        = ndx.dimension(function(d) {return +d.Run;}), //"+" will change the data format from string to numeric.
-                speedSumGroup       = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run / 1000;});
+    var dimensionByTotal = facts.dimension(function (d){ console.log(d.total); return d.total;});
+    var groupByTotal = dimensionByTotal.group(function(d){ return Math.floor(d/100)*100; });
+    //var groupByType = dimensionByTotal.group().reduceSum(function(d){ return d.total; });
 
-            // renderlet - This listener function will be invoked after transitions after redraw and render. Replaces the deprecated renderlet method.
-            chart
-                .width(768)
-                .height(480)
-                .x(d3.scaleLinear().domain([6,20]))
-                .brushOn(false)
-                .yAxisLabel("This is the Y Axis!")
-                .dimension(runDimension)
-                .group(speedSumGroup)
-                .on('renderlet', function(chart) {
-                    chart.selectAll('rect').on("click", function(d) {
-                        console.log("click!", d);
-                    });
-                });
-            chart.render();
-        });
+    var barChart = dc.barChart('#barChart')
+        .width(1024) // width of the chart
+        .height(200) // height of the chart
+        .dimension(dimensionByTotal) // dimention we create beforre passed as parameter
+        .group(groupByTotal) // group we created before passed as parameter to barChart method
+        .x(d3.scaleLinear().domain([0,400])) // created x-axis scales
+        .xUnits(dc.units.fp.precision(100)); // it defines the units of x-axis
+    // .x(d3.scaleOrdinal())
+    // .xUnits(dc.units.ordinal);
+    barChart.yAxis().ticks(5);
+    barChart.xAxis().ticks(4);
+    dc.renderAll();
 
-    </script>
-
+});
+</script>
 </body>
 </html>
