code for lecture 9

--- a/lectures/lec09/part01/4-bar.html
+++ b/lectures/lec09/part01/4-bar.html
@@ -35,6 +35,9 @@
     var g = svg.append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+
+    // "+" will change a string to a numeric value
+    // function(d) is the initialize function.
     d3.csv("assets/bar.csv", function(d) {
         d.frequency = +d.frequency;
         return d;
