--- a/lectures/lec09/part01/6-scale.html
+++ b/lectures/lec09/part01/6-scale.html
@@ -21,6 +21,7 @@
         barHeight = 20,
         margin = 1;
 
+    // d3-array statistics https://github.com/d3/d3-array
     var scale = d3.scalePow()
         .domain([d3.min(data), d3.max(data)])
         .range([50, 500]);
