--- a/lectures/lec09/part02/index.html
+++ b/lectures/lec09/part02/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>DC.js Bar Chart</title>
     <link rel="stylesheet" type="text/css" href="http://dc-js.github.io/dc.js/css/dc.css" />
@@ -8,11 +7,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
     <script type="text/javascript" src="https://dc-js.github.io/dc.js/js/dc.js"></script>
 </head>
-
 <body>
 <div id="barChart"></div>
-
 <script type="text/javascript">
+
     d3.json("assets/payments.json").then(function(data) {
 
         var facts = crossfilter(data);
@@ -24,17 +22,17 @@
         var groupByTotal = dimensionByTotal.group(function(d) {
             return Math.floor(d / 100) * 100;
         });
-        //var groupByType = dimensionByTotal.group().reduceSum(function(d){ return d.total; });
 
+        //var groupByType = dimensionByTotal.group().reduceSum(function(d){ return d.total; });
         var barChart = dc.barChart('#barChart')
             .width(1024) // width of the chart
             .height(200) // height of the chart
-            .dimension(dimensionByTotal) // dimention we create beforre passed as parameter
+            .dimension(dimensionByTotal) // dimension we create before passed as parameter
             .group(groupByTotal) // group we created before passed as parameter to barChart method
-            // .x(d3.scaleLinear().domain([0, 400])) // created x-axis scales
-            // .xUnits(dc.units.fp.precision(100)); // it defines the units of x-axis
-        .x(d3.scaleOrdinal())
-        .xUnits(dc.units.ordinal);
+            .x(d3.scaleLinear().domain([0, 400])) // created x-axis scales
+            .xUnits(dc.units.fp.precision(100)); // it defines the units of x-axis
+            // .x(d3.scaleOrdinal())
+            // .xUnits(dc.units.ordinal);
         barChart.yAxis().ticks(5);
         barChart.xAxis().ticks(4);
         dc.renderAll();
@@ -43,5 +41,4 @@
 
 </script>
 </body>
-
 </html>
