--- a/lectures/lec09/part02/index.html
+++ b/lectures/lec09/part02/index.html
@@ -30,7 +30,7 @@
             .width(1024) // width of the chart
             .height(200) // height of the chart
             .dimension(dimensionByTotal) // dimension we create before passed as parameter
-            .group(groupByType) // group we created before passed as parameter to barChart method
+            .group(groupByTotal) // group we created before passed as parameter to barChart method
             .x(d3.scaleLinear().domain([0, 400])) // created x-axis scales
             .xUnits(dc.units.fp.precision(100)); // it defines the units of x-axis
             // .x(d3.scaleOrdinal())
