--- a/lectures/lec06/6-data.html
+++ b/lectures/lec06/6-data.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
+
 <body>
 <script>
     var data = [4, 1, 6, 2, 8, 9];
@@ -13,5 +15,6 @@
         .append("span")
         .text(function(d) { return d + " "; });
 </script>
+</body>
 </body>
 </html>
