--- a/labs/lab04/step3.html
+++ b/labs/lab04/step3.html
@@ -2,7 +2,6 @@
 <html>
 <meta charset="utf-8">
 <head>
-    <link rel="stylesheet" href="css/style.css" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
@@ -14,11 +13,12 @@
         width = +svg.attr("width") - margin.left - margin.right,
         height = +svg.attr("height") - margin.top - margin.bottom;
 
-    var x = d3.scaleBand().range([0, width]).padding(0.1),
+    var x = d3.scaleBand().range([0, width]).padding(0.2),
         y = d3.scaleLinear().range([height, 0]);
 
     var g = svg.append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
 
     d3.csv("assets/data.csv", function(d) {
         d.rain = +d.rain;
@@ -30,26 +30,16 @@
         y.domain([0, d3.max(data, function(d) { return d.rain; })]);
 
         g.append("g")
-            .attr("class", "axis axis--x")
             .attr("transform", "translate(0," + height + ")")
             .call(d3.axisBottom(x));
 
         g.append("g")
-            .attr("class", "axis axis--y")
-            .call(d3.axisLeft(y).ticks(10))
-            .append("text")
-            .attr("transform", "rotate(-90)")
-            .attr("y", 6)
-            .attr("dy", "0.7em")
-            .attr("fill", "#DC4404")
-            .attr("text-anchor", "end")
-            .text("Inches");
+            .call(d3.axisLeft(y).ticks(10));
 
         g.selectAll(".bar")
             .data(data)
             .enter()
             .append("rect")
-            .attr("class", "bar")
             .attr("x", function(d) { return x(d.month); })
             .attr("y", function(d) { return y(d.rain); })
             .attr("width", x.bandwidth())
