--- a/lectures/lec10/template1.html
+++ b/lectures/lec10/template1.html
@@ -3,102 +3,76 @@
 <head>
     <meta charset="utf-8">
     <title>Web Mapping Template</title>
-    <!--<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v1.2.0/leaflet.css"/>-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- add icons -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <style>
-
-        html {
-            /*full screen the map*/
-            height: 100%;
-        }
-
-        body {
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-
-        #map {
-            width: 100%;
-            height: 100%;
-        }
-
+        html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
     </style>
-
-    <title>Web Map Viewer Template</title>
     <!--add required stylesheets-->
-    <!--<script src="https://cdn.leafletjs.com/leaflet/v1.2.0/leaflet.js"></script>-->
-    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 
 <!--add a Bootstrap navbar-->
-<div class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-md" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
         <!--<div class="container-fluid">-->
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <!--add a navbar brand - text or image-->
-            <a class="navbar-brand" href="#" title="Web Map Viewer Template">
-                <!--convert the style value to a class and then add the class to the css file.-->
-                <img src="img/logo-long.png" style="width:80%; margin-top:-10px" class="d-inline-block align-top">
-            </a>
-        </div>
+        <a class="navbar-brand" href="#">
+            <!--convert the style value to a class and then add the class to the css file.-->
+            <img src="img/logo-long.png"  width="80%" class="d-inline-block align-top">
+        </a>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <!--Create class ml-auto for the navbar items you want on the right.-->
+            <ul class="navbar-nav ml-auto" >
                 <!--a simple top bar link-->
-                <li>
-                    <a href="#">Topic 1</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Topic 1</a>
                 </li>
                 <!--a top bar link which opens the url in a new page-->
-                <li>
-                    <a href="#">Topic 2</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Topic 2</a>
                 </li>
                 <!--a drop-down menu-->
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Share To... <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" >Share To...</a>
+                    <div class="dropdown-menu" >
                         <!--use font awesome icons-->
-                        <li><a href="#"> <i class="fa fa-facebook-square"></i> Facebook</a></li>
-                        <li><a href="#"> <i class="fa fa-twitter-square"></i> Twitter</a></li>
-                        <li><a href="#"> <i class="fa fa-link"></i>
-                            ShortUrl</a></li>
-                    </ul>
+                        <a class="dropdown-item" href="#"> <i class="fa fa-facebook-square"></i> Facebook</a>
+                        <a class="dropdown-item" href="#"> <i class="fa fa-twitter-square"></i> Twitter</a>
+                        <a class="dropdown-item" href="#"> <i class="fa fa-link"></i> Short Url </a>
+                    </div>
                 </li>
+
                 <!--use icons in the top bar menu-->
                 <li>
-                    <a href="#"> <i class="fa fa-github fa-lg"></i>&nbsp;&nbsp;<span>Source Codes</span></a>
+                    <a class="nav-link" href="#"> <i class="fa fa-github fa-lg"></i>&nbsp;&nbsp;<span>Source Codes</span></a>
                 </li>
                 <!--an about page which open the url in a new page-->
                 <li>
-                    <a href="about.html" target="_blank">About</a>
+                    <a class= "nav-link" href="template3.html" target="_self">About</a>
                 </li>
             </ul>
+            <nav class="navbar navbar-dark bg-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
         </div>
-    </div>
-</div>
-
-
+</nav>
 <!--map container-->
 <div id="map" class="map"></div>
-
-
 <script type="text/javascript">
-
     var map = L.map("map", {zoomControl: false}).setView([40, -100], 5); // deactivate the zoomControl
     // construct a base map in light color.md.
     L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}@2x.png').addTo(map);
-
 </script>
-
 </body>
 </html>
