--- a/lectures/lec11/index.html
+++ b/lectures/lec11/index.html
@@ -24,7 +24,7 @@
     });
 
     // 2. Add a base map.
-    L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
+    L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}@2x.png').addTo(mymap);
 
 
     var mytile =L.tileLayer('assets/tiles/{z}/{x}/{y}.png', {
