lecture 13: icon codes

--- a/lectures/lec13/icons.html
+++ b/lectures/lec13/icons.html
@@ -26,8 +26,8 @@
 <body>
 <h1>Font Awesome</h1>
 
-a few examples of using font awesome icons. For more information, plesae check <a
-        href="https://fontawesome.com/how-to-use/web-fonts-with-css"> here</a> for more information.
+<small>a few examples of using font awesome icons. For more information, plesae check <a
+        href="https://fontawesome.com/how-to-use/web-fonts-with-css"> here</a> for more information. </small>
 
 <div>
     <!--user icon in two different styles-->
@@ -70,8 +70,7 @@ a few examples of using font awesome icons. For more information, plesae check <
 </div>
 <hr>
 <h1>Material Icons</h1>
-a few examples of using material icons. This icon library is maintained by Google. For more information, plesae check <a
-        href="http://google.github.io/material-design-icons/"> here</a> for more information.
+<small>a few examples of using material icons. This icon library is maintained by Google. For more information, plesae check <a href="http://google.github.io/material-design-icons/"> here</a> for more information. </small>
 <div>
     <p>
         <span> <i class="material-icons">info</i></span>
